[workspace]
members = [
    "rsky-relay",
    "rsky-common",
    "rsky-identity",
    "rsky-crypto",
]
default-members = ["rsky-relay"]
resolver = "2"

[workspace.dependencies]
# Internal crates
rsky-common = { path = "rsky-common" }
rsky-identity = { path = "rsky-identity" }
rsky-crypto = { path = "rsky-crypto" }

# External dependencies used by workspace members
serde_ipld_dagcbor = "0.6"
rand = "0.8"
rand_core = "0.6"
secp256k1 = "0.29"
sha2 = "0.10"
lexicon_cid = { package = "cid", version = "0.11", features = ["serde-codec"] }
